--- a/index.html
+++ b/index.html
@@ -4,8 +4,18 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/x-icon" href="/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta http-equiv="Content-Security-Policy" content="script-src 'self' 'unsafe-inline';" />
+    <meta
+      http-equiv="Content-Security-Policy"
+      content="script-src 'self' 'unsafe-inline';"
+    />
     <title>Electron + Vite + React</title>
+    <style>
+      .electron-drag {
+        height: 100%;
+        flex: 1;
+        -webkit-app-region: drag;
+      }
+    </style>
   </head>
   <body>
     <div id="root"></div>
